--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,6 +1,11 @@
 body {
     height: 100vh;
 }
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 $squareWidth: 100px;
 @mixin relativeCenter($posX: 50%, $posY: 50%) {
     position: relative;
@@ -30,7 +35,10 @@ $squareWidth: 100px;
       border-left: 50px solid transparent;
       border-right: 50px solid transparent;
       border-bottom: 100px solid #3498db;
-    //   position: relative; 
+    //   position: absolute;
+      top: 0;
+      left: 0;
+
   
       &--top {
         transform: rotate(0deg);
@@ -38,21 +46,46 @@ $squareWidth: 100px;
   
       &--right {
         transform: rotate(90deg);
-    //    @include triangles
+  
       }
         
   
       &--bottom {
         transform: rotate(180deg);
-        // @include triangles
+       
       }
   
       &--left {
         transform: rotate(-90deg);
-        // @include triangles()
+       
       }
     }
+
+    input {
+        width: 100%;
+        height: 100%;
+    }
+
+    &:has(input:checked) {
+        background-color: blueviolet;
+        .square__triangle {
+            border-bottom: 100px solid blueviolet;
+            &--top  {
+                @include translate(0, -100%)
+            }
+            &--right  {
+                @include translate(0, -100%)
+            }
+            &--bottom   {
+                @include translate(0, -100%)
+            }
+            &--left  {
+                @include translate(0, -100%)
+            }
+        }
+    }
   }
+
   
 
 
